# reverb-csd

./: Cargo.toml  README.md  justfile
.cargo/: config.toml
bundler/: Cargo.toml
src/: lib.rs  plugin.rs
src/plugin/: audio.rs  audio_processor.rs  gui.rs  main_thread.rs  params.rs  shared.rs
src/plugin/audio/: csd.rs  reverb.csd
src/util/: atomic.rs
