[package]
name = "reverb-csd"
version = "0.1.0"
edition = "2024"

[dependencies]
clack-extensions = { git = "https://github.com/prokopyl/clack.git", version = "0.1.0", features = ["clack-plugin", "audio-ports", "gui", "note-ports", "params", "raw-window-handle_06", "state"] }
clack-plugin = { git = "https://github.com/prokopyl/clack.git" }
clap-wrapper = { git = "https://github.com/blepfx/clap-wrapper-rs" }
