[workspace]
resolver = "3"
members = [".", "bundler"]

[package]
name = "reverb-csd"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
csound = { path =  "/home/anton/dev/tools/csound-rs" }
bincode-next = "2.1.0"
clack-extensions = { git = "https://github.com/prokopyl/clack.git", version = "0.1.0", features = ["clack-plugin", "audio-ports", "gui", "note-ports", "params", "raw-window-handle_05", "state"] }
clack-plugin = { git = "https://github.com/prokopyl/clack.git" }
clap-wrapper = { git = "https://github.com/blepfx/clap-wrapper-rs", features = ["vst3", "parallel"] }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "237d323c729f3aa99476ba3efa50129c5e86cad3", version = "0.1.0" }
egui-baseview = { git = "https://codeberg.org/BillyDM/egui-baseview.git", branch = "egui_33" }
egui_knob = "=0.3.10"
crossbeam-channel = "0.5.15"
libloading = "0.9.0"
once_cell = "1.21.4"
# tokio-bichannel = "1.0.2"
# tokio = { version = "1.52.1", features = ["full", "sync"] }

